--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>my first ever git hub repo</title>
+    <title>my first ever git hub repoj</title>
+<link rel="stylesheet" href="styles/blog.css">
+
+
 </head>
 <body>
-    
+    <div>
+<h3>my first website</h3>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis mollitia dolorum quos repudiandae modi cumque corrupti voluptate porro eos saepe, praesentium, reiciendis ipsum magni tenetur iusto nisi temporibus libero unde.</p>
+
+
+    </div>
 </body>
 </html>
