added a list to push code

--- a/index.html
+++ b/index.html
@@ -12,8 +12,24 @@
     <div>
 <h3>my first website</h3>
 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis mollitia dolorum quos repudiandae modi cumque corrupti voluptate porro eos saepe, praesentium, reiciendis ipsum magni tenetur iusto nisi temporibus libero unde.</p>
-
+    </div>
+   <div>
+<h3>my second website</h3>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis mollitia dolorum quos repudiandae modi cumque corrupti voluptate porro eos saepe, praesentium, reiciendis ipsum magni tenetur iusto nisi temporibus libero unde.</p>
+    </div>
+    <div>
+<h3>my third website</h3>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quam beatae officia veniam dolorem a quae? Nobis omnis minus deserunt blanditiis consequuntur vero voluptatem, autem eaque voluptate architecto fugiat delectus?</p>
 
     </div>
+<div>
+<h3>how to push incremental code</h3>
+<ol>
+    <li>git add .</li>
+<li>git commit -m"add a meaningful commit messages</li>
+<li>git push</li>
+</ol>
+</div>
+
 </body>
 </html>
